--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,18 +1,28 @@
 body 
 {
+    background: #1e1f24;
     color: orange;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 
 #cabecera
 {
     background: #33A;
     color: white;
-    box-shadow: 0px 20px 50px 0px rbga(0,0,0,0.75);
+    box-shadow: 0px 2px 20px 0px rbga(0,0,0,0.5);
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 2em;
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align:  middle;
 }
 
 #cabecera #tagline 
@@ -39,5 +49,6 @@ body
 
 #post 
 {
+    background: white;
     padding: 1em;
 }
